--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body { background: black; margin: 0; padding: 0; }
+body,h1 {font-family: "Saira", sans-serif}
+body, html {height: 100%}
+.bgimg {
+    background-image: url('assets/img/bg2.png');
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+}
