--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Falta pouco para o lançamento do app</p>
   </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Realização <a href="https://www.igrejadaorla.com.br" target="_blank">Igreja da Orla</a>
+  <div class="w3-display-bottomleft w3-padding-large sizeControll">
+    Realização <a href="http://www.igrejadaorla.com.br" target="_blank">Igreja da Orla</a>
   </div>
 </div>
