--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,17 @@
 .logo {
-  width: 100px;
+  width: 70px;
   height: auto;
-  margin-top: 10px;
+  margin-top: 14px;
+}
+
+h1 {
+  font-size: 42px !important;
+}
+
+p {
+  font-size: 14px !important;
+}
+
+.sizeControll {
+  font-size: 10px !important;
 }
