--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
+/* pace loading */
+
 /* You can add global styles to this file, and also import other style files */
 body { background: black; margin: 0; padding: 0; }
-body,h1 {font-family: "Saira", sans-serif}
+body,h1,div {font-family: "Saira", sans-serif}
 body, html {height: 100%}
 .bgimg {
     background-image: url('assets/img/bg2.png');
