--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,57 @@
 body { background: black; margin: 0; padding: 0; }
 body,h1,div {font-family: "Saira", sans-serif}
 body, html {height: 100%}
+h1 {
+  border: solid;
+  padding: 15px;
+}
 .bgimg {
-    background-image: url('assets/img/bg2.png');
+    /*background-image: url('assets/img/bg2.png');*/
+    background-color: black;
     min-height: 100%;
     background-position: center;
     background-size: cover;
+}
+/*.logo_progress {
+  background-image: url('assets/img/logo_dark.jpg');
+  max-height: 100px;
+  background-position: center;
+  background-size: cover;
+}*/
+
+.q1-logo {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 70px;
+  height: auto;
+  z-index: 2001;
+}
+
+.q1-logo-back {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 70px;
+  height: auto;
+  z-index: 2001;
+}
+
+.q1-logo-barra {
+  position: fixed;
+  bottom: -160px;
+  right: -160px;
+  width: 300px;
+  height: 300px;
+  background-color: #60d0ad;
+  transform: rotate(45deg);
+  z-index: 2000;
+}
+
+.q1-finalizador {
+  content:'';
+  width: 100%;
+  height: 140px;
 }
 
 .q1-white { color: white !important; }
